# FA-GPT

./: .flake8  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile.streamlit  EXTRACTION_QUALITY_RESEARCH.md  MIOPEN_GPU_ISSUE_ANALYSIS.md  OPERATIONS.md  README.md  SETUP_COMPLETE.md  SETUP_COMPLETE_LEGACY.md  analyze_pdfs.sh  automated_pdf_analyzer.py  batch_process_all.py  enhanced_reprocessing.py  process.py  process_documents.py  pyproject.toml  query_rag.py  requirements.txt  schema.sql  stop.sh  test_artillery_integration.py  test_artillery_simple.py  test_migration.py  test_simple_pdf_extraction.py  verify_docling.py  verify_plotly.py  verify_system.py
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: ballistic_computer.py  config.py  connectors.py  enhanced_granite_docling.py  enhanced_granite_docling_backup.py  main.py  main.py.backup_gui_refactor  military_extraction.py  military_ui.py  military_vision.py  multimodal_embeddings.py  orders_generator.py  prompts.py  simple_ingestion.py  state.py
backups/audit_snapshot_20250923_201005/: API_DOCS.md  ARCHITECTURE.md  CHANGELOG.md  FA-GPT_ENHANCEMENT_ROADMAP.md  MANIFEST_FILES_SHA256.txt  README.md  README_AUDIT.md  TECHNICAL_DOCS.md  connect_shared_folder.sh  docker-compose.yml  docker_process_documents.sh  monitor_performance.sh  optimize_system.sh  process_documents.py  requirements.txt  retry_failed_ingestion.py  serve_setup_script.sh  setup_file_sharing.sh  simple_plotly_test.py  simple_test_migration.py  start.sh  status.sh  system_status.py  test_gpu_acceleration.py
backups/audit_snapshot_20250923_201005/app/: batch_processing.py  config.py  enhanced_granite_docling.py  granite_multimodal_extractor.py  rag_core.py  (+2 more)
backups/audit_snapshot_20250923_203552_enhanced/: ARCHITECTURE.md  Dockerfile.streamlit  README.md  start.sh  system_status.py
original pdfs/: PDF_MANIFEST.md  README.md
tests/: test_integration.py  test_smoke.py
(+5 files in other folders)
